# maelstrom-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yaml
docs/: Makefile
docs/source/: conf.py  index.rst  maelstrom.rst  modules.rst
docs/source/reference/: maelstrom.rst
maelstrom/: __init__.py  genotype.py  island.py  population.py
maelstrom/selection/: parent.py  unique.py
